--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.7",
+    "lucide-react": "^0.541.0",
+    "motion": "^12.23.12",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router": "^7.8.1",
+    "react-router-dom": "^7.8.1",
+    "rout": "^1.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
