--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "lucide-react": "^0.541.0",
     "motion": "^12.23.12",
